Moves common settings out of subproject config